src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Favor Opportunities</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Active</fullName>
        </values>
        <values>
            <fullName>Deactivated</fullName>
        </values>
        <values>
            <fullName>Potential</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>GSI</fullName>
        <description>Green Street Investors Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Verbal Win %286%29</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Quota</fullName>
        <description>Used for entering new booking target for a GSA user.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Quota%2C Current</fullName>
        </values>
        <values>
            <fullName>Quota%2C Prior Year</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Renewal</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Agreement Sent and Being Negotiated %285%29</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Conducting Needs Analysis %283%29</fullName>
        </values>
        <values>
            <fullName>Consolidated</fullName>
        </values>
        <values>
            <fullName>Pricing Proposal Sent %284%29</fullName>
        </values>
        <values>
            <fullName>Qualified Prospect %282%29</fullName>
        </values>
        <values>
            <fullName>Suspended</fullName>
        </values>
        <values>
            <fullName>Verbal Win %286%29</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Sales Development</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Disqualified</fullName>
        </values>
        <values>
            <fullName>In Review</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Sales Opportunity</fullName>
        <description>New Business Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Agreement Sent and Being Negotiated %285%29</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Conducting Needs Analysis %283%29</fullName>
        </values>
        <values>
            <fullName>Consolidated</fullName>
        </values>
        <values>
            <fullName>Pricing Proposal Sent %284%29</fullName>
        </values>
        <values>
            <fullName>Qualified Prospect %282%29</fullName>
        </values>
        <values>
            <fullName>Suspended</fullName>
        </values>
        <values>
            <fullName>Verbal Win %286%29</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>ADV_PPD_Sent__c</fullName>
        <label>PPD Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AP_Email__c</fullName>
        <label>AP Email</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_Address__c</fullName>
        <formula>Account.ShippingStreet  + &quot;, &quot; +    Account.ShippingCity   + &quot;, &quot; +  Account.ShippingState + &quot; &quot; +  Account.ShippingPostalCode</formula>
        <label>Account Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_List_Memberships__c</fullName>
        <formula>Account.List_Membership_Account__c</formula>
        <label>Account List Memberships</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <formula>Account.OwnerIDName__c</formula>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activation_Deactivation_Needs__c</fullName>
        <label>Activation/Deactivation Needs</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full Account Deactivation</fullName>
                </value>
                <value>
                    <fullName>Remove Lost Products</fullName>
                    <label>Remove Lost Product(s)</label>
                </value>
                <value>
                    <fullName>Trial Activation</fullName>
                </value>
                <value>
                    <fullName>Trial Deactivation</fullName>
                </value>
                <value>
                    <fullName>Full Account Activation</fullName>
                </value>
                <value>
                    <fullName>Add Upsold Products</fullName>
                    <label>Add Upsold Product(s)</label>
                </value>
                <value>
                    <fullName>Suspend</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Advisory_Only_Notes__c</fullName>
        <label>Advisory Only Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Annual_Recurring_Revenue__c</fullName>
        <label>Annual Recurring Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_Date__c</fullName>
        <inlineHelpText>Capture the date/time of when a Opportunity was moved out from Integration User.</inlineHelpText>
        <label>Assigned Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Assigned_Team__c</fullName>
        <inlineHelpText>Initial Team this opportunity was assigned to.</inlineHelpText>
        <label>Assigned Team</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hewett Research</fullName>
                    <label>Green</label>
                </value>
                <value>
                    <fullName>White</fullName>
                </value>
                <value>
                    <fullName>UK Sales</fullName>
                </value>
                <value>
                    <fullName>US News</fullName>
                </value>
                <value>
                    <fullName>US Research</fullName>
                </value>
                <value>
                    <fullName>EU SDR Inbound</fullName>
                </value>
                <value>
                    <fullName>US SDR Inbound</fullName>
                </value>
                <value>
                    <fullName>SDR Outbound</fullName>
                </value>
                <value>
                    <fullName>Head of SDR&apos;s</fullName>
                </value>
                <value>
                    <fullName>React News</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>At_RIsk_Revenue__c</fullName>
        <formula>IF( AND(NOT(ISBLANK((TEXT(Renewal_Risk__c)))), IsClosed = FALSE), Starting_Price_Opp__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>At RIsk Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Attrition_Risk__c</fullName>
        <label>Attrition Risk</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Automatic_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Automatic Renewal?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AverageTotalARR__c</fullName>
        <description>Average ARR for the different years of the contract duration.</description>
        <formula>DDS_AverageTotalARR__c / CURRENCYRATE(TEXT( CurrencyIsoCode ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average ARR for the different years of the contract duration.</inlineHelpText>
        <label>Average Total ARR USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BDR_Referred_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SAO Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Base_Sale_Price__c</fullName>
        <description>Total price for all bundled products before discounts</description>
        <label>Base Sale Price</label>
        <summarizedField>OpportunityLineItem.UnitPrice</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Billing_Cadence_for_Invoice__c</fullName>
        <formula>IF(ISPICKVAL( Billing_Schedule__c , &quot;In Advance - Annual&quot;), &quot;Annual&quot;,
IF(ISPICKVAL( Billing_Schedule__c , &quot;In Advance – Semi – Annual&quot;), &quot;Semi – Annual&quot;,
IF(ISPICKVAL( Billing_Schedule__c , &quot;In Advance – Quarterly&quot;), &quot;Quarterly&quot;,
IF(ISPICKVAL( Billing_Schedule__c , &quot;In-Advance – Monthly&quot;), &quot;Monthly&quot;,
IF(ISPICKVAL( Billing_Schedule__c , &quot;In Arrears – Semi – Annual&quot;), &quot;Semi – Annual&quot;,
IF(ISPICKVAL( Billing_Schedule__c , &quot;In Arrears – Quarterly&quot;), &quot;Quarterly&quot;,
IF(ISPICKVAL( Billing_Schedule__c , &quot;In-Arrears – Monthly&quot;), &quot;Monthly&quot;,
IF(ISPICKVAL( Billing_Schedule__c , &quot;One-time&quot;), &quot;One-time&quot;,
&quot;non-standardized&quot;))))))))</formula>
        <label>Billing Cadence for Invoice</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_GSA_Company_Id__c</fullName>
        <formula>Billing_Contact__r.GSA_Contact_ID__c</formula>
        <label>Billing Contact GSA Company Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Billing Contact)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Schedule_NS_Internal_ID__c</fullName>
        <formula>CASE( Billing_Schedule__c ,
&quot;In Advance - Annual&quot;,&apos;2&apos;,
&quot;In Advance – Quarterly&quot;,&apos;1&apos;,
&quot;In Advance – Semi – Annual&quot;,&apos;3&apos;,
&quot;In Arrears – Quarterly&quot;,&apos;4&apos;,
&quot;In Arrears – Semi – Annual&quot;,&apos;5&apos;,
&quot;In-Advance – Monthly&quot;,&apos;6&apos;,
&quot;In-Arrears – Monthly&quot;,&apos;7&apos;,
&quot;One-time&quot;, &apos;8&apos;,&apos;&apos;)</formula>
        <label>Billing Schedule NS Internal ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Schedule__c</fullName>
        <label>Billing Schedule</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Advance - Annual</fullName>
                </value>
                <value>
                    <fullName>In Advance – Semi – Annual</fullName>
                </value>
                <value>
                    <fullName>In Advance – Quarterly</fullName>
                </value>
                <value>
                    <fullName>In-Advance – Monthly</fullName>
                </value>
                <value>
                    <fullName>In Arrears – Semi – Annual</fullName>
                </value>
                <value>
                    <fullName>In Arrears – Quarterly</fullName>
                </value>
                <value>
                    <fullName>In-Arrears – Monthly</fullName>
                </value>
                <value>
                    <fullName>One-time</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Monthly-12</fullName>
                    <isActive>false</isActive>
                    <label>Monthly-12</label>
                </value>
                <value>
                    <fullName>Monthly-500</fullName>
                    <isActive>false</isActive>
                    <label>Monthly-500</label>
                </value>
                <value>
                    <fullName>Quarterly-In Advance</fullName>
                    <isActive>false</isActive>
                    <label>Quarterly-In Advance</label>
                </value>
                <value>
                    <fullName>Quarterly-In Arrears</fullName>
                    <isActive>false</isActive>
                    <label>Quarterly-In Arrears</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRS_Sent__c</fullName>
        <inlineHelpText>Only Required for Individuals</inlineHelpText>
        <label>CRS Sent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_Name__c</fullName>
        <label>Campaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_ID__c</fullName>
        <description>Internal id of the class</description>
        <label>Class ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <description>Classification</description>
        <label>Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Corporate</fullName>
                    <default>true</default>
                    <label>Corporate</label>
                </value>
                <value>
                    <fullName>Advisory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Close_Date_Pushes__c</fullName>
        <description>Number updated by workflow to Track the number of times an opportunity’s close date has been updated to a date in the future.</description>
        <label>Close Date Pushes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Close_Reason__c</fullName>
        <label>Close Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Advisory Involvement</fullName>
                </value>
                <value>
                    <fullName>Change of Business Model / Strategy</fullName>
                </value>
                <value>
                    <fullName>Communication Strategy</fullName>
                </value>
                <value>
                    <fullName>Competition</fullName>
                </value>
                <value>
                    <fullName>Competitive Win</fullName>
                </value>
                <value>
                    <fullName>Consolidated</fullName>
                </value>
                <value>
                    <fullName>Contracted Client</fullName>
                </value>
                <value>
                    <fullName>CSA Client</fullName>
                </value>
                <value>
                    <fullName>Due Diligence</fullName>
                </value>
                <value>
                    <fullName>Economic Impact (e.g. COVID)</fullName>
                </value>
                <value>
                    <fullName>Favor Access Expired</fullName>
                </value>
                <value>
                    <fullName>Fit</fullName>
                </value>
                <value>
                    <fullName>Interest - Check Back Later</fullName>
                </value>
                <value>
                    <fullName>Lost Product Line(s)</fullName>
                </value>
                <value>
                    <fullName>Made New Client</fullName>
                </value>
                <value>
                    <fullName>Market Conditions</fullName>
                </value>
                <value>
                    <fullName>Merger &amp; Acquisition</fullName>
                </value>
                <value>
                    <fullName>Needs Change</fullName>
                </value>
                <value>
                    <fullName>New Research Client</fullName>
                </value>
                <value>
                    <fullName>No Budget</fullName>
                </value>
                <value>
                    <fullName>Non-contracted</fullName>
                </value>
                <value>
                    <fullName>Non-coverage</fullName>
                </value>
                <value>
                    <fullName>Non-responsive</fullName>
                </value>
                <value>
                    <fullName>Online Order</fullName>
                </value>
                <value>
                    <fullName>Out of Business / Fund Closure</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Product Offering</fullName>
                </value>
                <value>
                    <fullName>Timing</fullName>
                </value>
                <value>
                    <fullName>Validating Investment Thesis</fullName>
                </value>
                <value>
                    <fullName>Value Equation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Close_Year__c</fullName>
        <formula>TEXT(YEAR( CloseDate))</formula>
        <label>Close Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_Opportunity_Notes__c</fullName>
        <label>Closed Opportunity Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_Type_Opp__c</fullName>
        <description>Company type mapped over from Account in order to add to an email template.</description>
        <formula>Text( Account.Company_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consolidated_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consolidated To</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Opportunity.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities (Consolidated To)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <description>Date the contracts ends.</description>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <description>When is their first official day of research access</description>
        <inlineHelpText>*For one-time deals- use the same date for contract start and end date.</inlineHelpText>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Month__c</fullName>
        <formula>CASE(MONTH(Contract_Start_Date__c),
1,&quot;January &quot;,
2,&quot;February &quot;,
3,&quot;March &quot;,
4,&quot;April &quot;,
5,&quot;May &quot;,
6,&quot;June &quot;,
7,&quot;July &quot;,
8,&quot;August &quot;,
9,&quot;September &quot;,
10,&quot;October &quot;,
11,&quot;Novermber &quot;,
12,&quot;December &quot;,
null)
+
TEXT(YEAR(Contract_Start_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Start Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Subscription_PMP</fullName>
                    <label>Subscription - PMP</label>
                </value>
                <value>
                    <fullName>Contracted_PSI</fullName>
                    <label>Contracted - PSI</label>
                </value>
                <value>
                    <fullName>Non-Contracted_PSI</fullName>
                    <label>Non-Contracted - PSI</label>
                </value>
                <value>
                    <fullName>Anypay_PSI</fullName>
                    <label>Anypay - PSI</label>
                </value>
                <value>
                    <fullName>Advisory</fullName>
                </value>
                <value>
                    <fullName>Trading</fullName>
                    <isActive>false</isActive>
                    <label>Trading</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Create_New_Renewal_Opportunity__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field is used to determine whether a new renewal Opportunity must be created after the current renewal opportunity is closed.</description>
        <inlineHelpText>Only check this box for ONE year renewals. Multi-year Renewals are created automatically from the Year 2, 3, etc fields below.</inlineHelpText>
        <label>Create New Renewal Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_New_Sales_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create New Sales Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_Date_short__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date (short)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Currency_NS_Internal_Id__c</fullName>
        <formula>CASE( CurrencyIsoCode,&apos;USD&apos;,&apos;1&apos;,&apos;CAD&apos;,&apos;3&apos;,&apos;CHF&apos;,&apos;8&apos;,&apos;DKK&apos;,&apos;7&apos;, &apos;EUR&apos;,&apos;4&apos;,&apos;GBP&apos;,&apos;2&apos;,&apos;HUF&apos;,&apos;10&apos;,&apos;NOK&apos;,&apos;5&apos;,&apos;PLN&apos;,&apos;9&apos;,&apos;SEK&apos;,&apos;6&apos;,&apos;TRY&apos;,&apos;11&apos; ,&apos;1&apos;)</formula>
        <label>Currency NS Internal Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Contract_Year__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Current Contract Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Year_Contract_Start_Date__c</fullName>
        <formula>IF(
Current_Contract_Year__c=2,Year_2_Contract_Start_Date__c,
IF(
Current_Contract_Year__c=3,Year_3_Contract_Start_Date__c,
IF(
Current_Contract_Year__c=4,Year_4_Contract_Start_Date__c,
IF(
Current_Contract_Year__c=5,Year_5_Contract_Start_Date__c,
Contract_Start_Date__c))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Year Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Channel_NS_Internal_Id__c</fullName>
        <description>Internal id of customer channel values</description>
        <formula>CASE( Customer_Channel__c , &apos;PSI - Public Securities Investor&apos;, 2, &apos;PMP - Private Market Participant&apos;,1,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Channel NS Internal Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Channel_New__c</fullName>
        <formula>Account.Customer_Channel__c</formula>
        <label>Customer Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Channel__c</fullName>
        <label>Customer Channel Old</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PMP - Private Market Participant</fullName>
                </value>
                <value>
                    <fullName>PSI - Public Securities Investor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DDS_ARRChanged__c</fullName>
        <description>Validates if the Total ARR or the score has changed forapproved-score opportunities</description>
        <formula>OR(
	AND(
		OR(
			TEXT( DDS_ScoreAssignment__c ) &lt;&gt;  DDS_ApprovedScore__c, 
			ROUND(AverageTotalARR__c,2) &lt;&gt;  DDS_ApprovedARR__c
			),
		ISPICKVAL( DDS_ApprovalProcessStatus__c , &quot;Approved&quot;) 
		),
	AND(
		DDS_ScoredARR__c &lt;&gt; ROUND( AverageTotalARR__c ,2),
		NOT(ISBLANK(TEXT(DDS_ScoreAssignment__c)))
	)
	)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ARR Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DDS_ApprovalEmailHVTYoYInsight__c</fullName>
        <formula>IF (
  AND(YoY_Target_Unmet__c = FALSE, HVT_Increase_Unmet__c = TRUE),
&quot; and the total Contract ARR has not met the High Value Account target of &quot; &amp; TEXT(High_Value_Target__c)&amp; &quot;%&quot;,
IF (
  AND(YoY_Target_Unmet__c = TRUE, HVT_Increase_Unmet__c = FALSE),
&quot; and the contract prices set have not met the expected growth on &quot;&amp;Unmet_Deal_Insights__c ,
IF(
  AND(YoY_Target_Unmet__c = TRUE, HVT_Increase_Unmet__c = TRUE),
&quot; and the total Contract ARR has not met the High Value Account target of &quot; &amp; TEXT(High_Value_Target__c)&amp; &quot;% and the contract prices set have not met the expected growth on &quot;&amp;Unmet_Deal_Insights__c,
&quot;&quot;
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval email HVT and YoY Insight</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DDS_ApprovalEmailRenewalInsight__c</fullName>
        <formula>TEXT( ROUND(Same_Store_Increase__c*100,2))&amp;&quot;%&quot; &amp; BR()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval email Renewal Insight</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DDS_ApprovalProcessStatus__c</fullName>
        <description>Used to control the visibility of scoring visibility</description>
        <label>Score Approval Process</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DDS_ApprovedARR__c</fullName>
        <label>Approved ARR USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DDS_ApprovedScore__c</fullName>
        <label>Approved Score</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DDS_AverageTotalARR__c</fullName>
        <formula>IF(
OR(
FLOOR((Contract_End_Date__c - Contract_Start_Date__c)/365) &lt;= 1,
ISNULL(Contract_End_Date__c),
ISNULL(Contract_Start_Date__c)
),
  Total_ARR__c , 
((Total_ARR__c + X2nd_Year_Amount_in_USD__c +  X3rd_Year_Amount_in_USD__c +  Year_4_Amount__c +  Year_5_Amount__c +  Year_6_Amount__c +  Year_7_Amount__c )/FLOOR((Contract_End_Date__c - Contract_Start_Date__c)/365) )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Total ARR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DDS_PriceJustification__c</fullName>
        <description>Field to store score&apos; approval process initial comments</description>
        <label>Price Justification</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DDS_ScoreARREssential__c</fullName>
        <label>Current grade min ARR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DDS_ScoreARRResidual__c</fullName>
        <label>Current grade max ARR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DDS_ScoreApplicability__c</fullName>
        <formula>AND(
OR( ISPICKVAL(Sales_Type__c, &quot;New&quot;), ISPICKVAL(Sales_Type__c, &quot;Renewal&quot;), ISPICKVAL(Sales_Type__c, &quot;Upsell&quot;)
),
Current_Contract_Year__c = 1,
OR(
AND(IsClosed = TRUE, NOT( ISBLANK(TEXT(DDS_ScoreAssignment__c)))),
IsClosed = FALSE
)
)</formula>
        <label>Score Applicability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DDS_ScoreAssignment__c</fullName>
        <label>Score Assignment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                    <color>#419249</color>
                    <label>A</label>
                </value>
                <value>
                    <fullName>B</fullName>
                    <color>#78C953</color>
                    <label>B</label>
                </value>
                <value>
                    <fullName>C</fullName>
                    <color>#57F17C</color>
                    <label>C</label>
                </value>
                <value>
                    <fullName>D</fullName>
                    <color>#F3D904</color>
                    <label>D</label>
                </value>
                <value>
                    <fullName>F</fullName>
                    <color>#FF6666</color>
                    <label>F</label>
                </value>
                <value>
                    <fullName>ErrorInput</fullName>
                    <label>Error input</label>
                </value>
                <value>
                    <fullName>ErrorAdmin</fullName>
                    <label>Error admin</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DDS_ScoreDebug__c</fullName>
        <label>Error Details</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DDS_ScoreIcon__c</fullName>
        <formula>IMAGE(&quot;/resource/ScoringIcons/GS_Icons_&quot;+TEXT(DDS_ScoreAssignment__c)+&quot;.png&quot;, TEXT(DDS_ScoreAssignment__c ), 30, 30)+&quot; &quot; +
 IF (TEXT(DDS_ScoreAssignment__c) = &quot;ErrorAdmin&quot;, 
     &quot;Error Admin&quot;, 
       IF(TEXT(DDS_ScoreAssignment__c) = &quot;ErrorInput&quot;, &quot;Error Input&quot;, TEXT(DDS_ScoreAssignment__c)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DDS_ScoreInsightARRpercentage__c</fullName>
        <label>Score Insight ARR % Increase</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DDS_ScoreInsight__c</fullName>
        <label>Score Insight</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>